--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ before_install:
   - if test $CC = gcc; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20; fi
   - if test $CC = gcc; then sudo update-alternatives --config gcc; fi
   - if test $CC = gcc; then sudo update-alternatives --config g++; fi
-
+before_script:
+  - chmod +x ./ContinuousIntegration/Travis.sh
 script: ./ContinuousIntegration/Travis.sh
