--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,14 @@ compiler:
   - clang
   - gcc
 before_install:
-  - sudo apt-add-repository -y ppa:jkeiren/ppa
-  - if test $CC = gcc; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+  - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
   - sudo apt-get update -qq
-  - if test $CC = gcc; then sudo apt-get install --yes --force-yes gcc-4.7 g++-4.7; fi
-  - if test $CC = gcc; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20; fi
-  - if test $CC = gcc; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20; fi
-  - if test $CC = gcc; then sudo update-alternatives --config gcc; fi
-  - if test $CC = gcc; then sudo update-alternatives --config g++; fi
-  - if test $CC = gcc; then export CXX="g++-4.7" CC="gcc-4.7"; fi
+install:
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
 before_script:
   - chmod +x ./ContinuousIntegration/Travis.sh
 script: ./ContinuousIntegration/Travis.sh
