--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,7 @@ before_build:
   - mkdir Build
   - cd Build
   - cmake .. -G "Visual Studio 12"
+  - ls
+  - pwd
 build:
   project: .\RUN_TESTS.vcxproj
