--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,5 @@ before_build:
   - mkdir Build
   - cd Build
   - cmake .. -G "Visual Studio 12"
-build:
-  project: Build\RUN_TESTS.vcxproj
+  - cmake --build .. --target ALL_BUILD
+  - cmake --build .. --target RUN_TESTS
