--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ os:
 branches:
   only:
     - master
+install:
+  - set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
 before_build:
   - mkdir Build
   - cd Build
